# ExtraAcos

./: .gitignore  README.md
EquationSolver/: CMakeLists.txt  Doxyfile
EquationSolver/QuadraticEquationSolver/: QuadraticEquationSolver.cpp  QuadraticEquationSolver.h
EquationSolver/TestLib/googletest-master/googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
EquationSolver/Tests/QuadraticEquatationSolver/: QuadraticEquationSolverTest.cpp  QuadraticEquationSolverTest.h
EquationSolver/documentaion/html/: LinearEquationSolver_8h_source.html  QuadraticEquationSolver_8h_source.html  classLinearEquationSolver-members.html  classMyString.html  classOnTheFlyPrimeTable.html  classPrimeTable-members.html  classQuadricQuationSolverTest-members.html  classQuadricQuationSolverTest__coll__graph.md5  classcpp_1_1ast_1_1AstBuilder-members.html  classcpp_1_1ast_1_1Class.html  classcpp_1_1ast_1_1Define__coll__graph.dot  classcpp_1_1ast_1_1Delete-members.html  classcpp_1_1ast_1_1Enum__coll__graph.dot  classcpp_1_1ast_1_1Expr.html  classcpp_1_1ast_1_1Friend.html  classcpp_1_1ast_1_1Goto-members.html  classcpp_1_1ast_1_1Goto__coll__graph.dot  classcpp_1_1ast_1_1Include.html  classcpp_1_1ast_1_1Include__inherit__graph.dot  classcpp_1_1ast_1_1Method__inherit__graph.dot  classcpp_1_1ast_1_1Parameter__coll__graph.dot  classcpp_1_1ast_1_1Parameter__inherit__graph.dot  classcpp_1_1ast_1_1Return-members.html  classcpp_1_1ast_1_1Return.html  classcpp_1_1ast_1_1Return__inherit__graph.dot  classcpp_1_1ast_1_1Type__coll__graph.dot  classcpp_1_1ast_1_1Typedef__inherit__graph.dot  classcpp_1_1ast_1_1Union-members.html  classcpp_1_1ast_1_1VariableDeclaration-members.html  classcpp_1_1ast_1_1VariableDeclaration__coll__graph.dot  classcpp_1_1ast_1_1__GenericDeclaration-members.html  classcpp_1_1ast_1_1__NestedType.html  classcpp_1_1ast_1_1__NullDict-members.html  classcpp_1_1gmock__class__test_1_1GenerateMethodsTest__inherit__graph.dot  classcpp_1_1gmock__class__test_1_1GenerateMocksTest-members.html  classcpp_1_1gmock__class__test_1_1GenerateMocksTest__inherit__graph.dot  classcpp_1_1tokenize_1_1Token-members.html  classcpp_1_1tokenize_1_1Token__inherit__graph.dot  classpump_1_1CodeNode.html  classpump_1_1Cursor-members.html  (+329 more)
EquationSolver/documentaion/html/search/: all_1.js  all_17.js  classes_1.js  classes_12.js  classes_3.js  classes_4.js  classes_e.js  functions_0.js  functions_1.js  pages_3.js  pages_4.js  pages_6.js  pages_7.js  searchdata.js  variables_1.js
EquationSolver/documentaion/latex/: annotated.tex  classLinearEquationSolver.tex  classOnTheFlyPrimeTable.tex.tmp  classQuadricQuationSolverTest.tex.tmp  classQueue.tex  classResult.tex  classcpp_1_1ast_1_1AstBuilder__inherit__graph.dot  classcpp_1_1ast_1_1Class__coll__graph.md5  classcpp_1_1ast_1_1Delete__coll__graph.dot  classcpp_1_1ast_1_1Delete__inherit__graph.dot  classcpp_1_1ast_1_1Expr.tex  classcpp_1_1ast_1_1Function__inherit__graph.md5  classcpp_1_1ast_1_1Node__inherit__graph.md5  classcpp_1_1ast_1_1Struct__coll__graph.md5  classcpp_1_1ast_1_1Type__coll__graph.dot  classcpp_1_1ast_1_1Type__inherit__graph.md5  classcpp_1_1ast_1_1Typedef__coll__graph.md5  classcpp_1_1ast_1_1Typedef__inherit__graph.dot  classcpp_1_1ast_1_1Union__coll__graph.dot  classcpp_1_1ast_1_1Using__inherit__graph.dot  classcpp_1_1ast_1_1__NestedType.tex  classcpp_1_1ast_1_1__NullDict__inherit__graph.dot  classcpp_1_1gmock__class__test_1_1GenerateMethodsTest__inherit__graph.md5  classcpp_1_1gmock__class__test_1_1GenerateMocksTest.tex  classcpp_1_1gmock__class__test_1_1GenerateMocksTest__coll__graph.md5  classcpp_1_1gmock__class__test_1_1GenerateMocksTest__inherit__graph.dot  classcpp_1_1gmock__class__test_1_1TestCase.tex  classcpp_1_1gmock__class__test_1_1TestCase__inherit__graph.dot  classcpp_1_1tokenize_1_1Token.tex  classcpp_1_1tokenize_1_1Token__coll__graph.dot  classpump_1_1Env.tex  classpump_1_1ExpNode.tex  classpump_1_1IfNode.tex  classpump_1_1RawCodeNode.tex  classstd_1_1tr1_1_1gtest__internal_1_1Get.tex  classstd_1_1tr1_1_1gtest__internal_1_1Get_3_016_01_4.tex  classstd_1_1tr1_1_1tuple.tex  classtesting_1_1Action.tex  classtesting_1_1ActionInterface.tex  classtesting_1_1DefaultValue_3_01T_01_6_01_4.tex  (+128 more)
Task3/SafeStackCStyle/: CMakeLists.txt  Doxyfile
Task3/SafeStackCStyle/SafeStack/: SafeStack.cpp  SafeStack.h
Task3/SafeStackCStyle/Tests/SafeStackTester/: SafeStackTest.cpp  SafeStackTest.h
Task3/SafeStackCStyle/docs/html/: SafeStackTest_8h_source.html  SafeStack_8h_source.html  classAdHocTestResultTest__inherit__graph.dot  classBarEnvironment__inherit__graph.dot  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  classCommentTest__coll__graph.dot  classCommonTest.html  classCommonTest__inherit__graph.dot  classConversionHelperBase.html  classConversionHelperDerived.html  classConversionHelperDerived__coll__graph.dot  classCounter.html  classDogAdder.html  (+792 more)
Task3/SafeStackLib/: CMakeLists.txt
Task3/SafeStackLib/SafeStack/: SafeStack.cpp  SafeStack.h
Task4/Processor/: CMakeLists.txt  Factorial  QuatationSolver  main.cpp
Task4/Processor/Processor/: Processor.cpp  Processor.h
Task5/OptimalList/: CMakeLists.txt  Doxyfile  main.cpp
Task5/OptimalList/List/: Node.cpp  Node.h
Task5/OptimalList/OptimalList/: OptimalList.cpp  OptimalList.h
(+8878 files in other folders)
